Add <title> to try isort html page to make it valid html.

--- a/docs/quick_start/0.-try.md
+++ b/docs/quick_start/0.-try.md
@@ -14,6 +14,7 @@ Use our live isort editor to see how isort can help improve the formatting of yo
 <script src="https://cdn.jsdelivr.net/pyodide/v0.15.0/full/pyodide.js" integrity="sha256-W+0Mr+EvJb1qJx9UZ9wuvd/uWrXCzeaEu6OzEEHMCik=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/ace-builds@1.4.5/src-min-noconflict/ace.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://pycqa.github.io/isort/docs/quick_start/interactive.css">
+<title>Try isort</title>
 </head>
 
 
