Add DanielNoord as core developer

--- a/docs/contributing/4.-acknowledgements.md
+++ b/docs/contributing/4.-acknowledgements.md
@@ -1,6 +1,7 @@
 Core Developers
 ===================
 - Aniruddha Bhattacharjee (@anirudnits)
+- Daniël van Noord (@DanielNoord) 
 - Jon Dufresne (@jdufresne)
 - Tamas Szabo (@sztamas)
 - Thiago A. (@staticdev)
