Format with `ruff` instead of `black`

--- a/docs/contributing/2.-coding-standard.md
+++ b/docs/contributing/2.-coding-standard.md
@@ -41,16 +41,16 @@ There should be a `tests/test_$MODULE_NAME.py` file created to correspond to eve
 
 ## Automated Code Cleaners
 
-All code submitted to Hug should be formatted using Black and isort.
-Black should be run with the line length set to 100, and isort with Black compatible settings in place.
+All code submitted should be formatted using Ruff and isort.
+Ruff should be run with the line length set to 100, and isort with Black compatible settings in place.
 
 ## Automated Code Linting
 
-All code submitted to hug should run through the following tools:
+All code submitted should run through the following tools:
 
-- Black and isort verification.
+- Ruff and isort verification.
 - Flake8
-   - flake8-bugbear
+- flake8-bugbear
 - Bandit
 - ruff
 - pep8-naming
