feat!: remove old finders flag and legacy finder logic
- Remove old-finders flag and config option
- Remove related dependencies (pip_api and pipreqs)
- Update tests and docs

Closes #2445

--- a/docs/upgrade_guides/5.0.0.md
+++ b/docs/upgrade_guides/5.0.0.md
@@ -67,8 +67,7 @@ In isort 5, you can still get this behavior by moving your extra modules from th
 ### module placement changes: `known_third_party`, `known_first_party`, `default_section`, etc...
 isort has completely rewritten its logic for placing modules in 5.0.0 to ensure the same behavior across environments. You can see the details of this change [here](https://github.com/pycqa/isort/issues/1147).
 The TL;DR of which is that isort has now changed from `default_section=FIRSTPARTY` to `default_section=THIRDPARTY`. If you all already setting the default section to third party, your config is probably in good shape.
-If not, you can either use the old finding approach with `--magic-placement` in the CLI or `old_finders=True` in your config, or preferably, you are able to remove all placement options and isort will determine it correctly.
-If it doesn't, you should be able to just specify your projects modules with `known_first_party` and be done with it.
+If not, you should be able to just specify your projects modules with `known_first_party` and be done with it.
 
 ## Migrating pre-commit
 
